; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_32086.c_calc_authresp.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_32086.c_calc_authresp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@challenge_fix = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @calc_authresp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @challenge_fix, align 4
  %5 = icmp eq i32 %4, 1
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = mul nsw i32 %7, 178
  %9 = load i32, i32* %3, align 4
  %10 = ashr i32 %9, 16
  %11 = xor i32 %8, %10
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 %12, 16
  %14 = xor i32 %11, %13
  %15 = xor i32 %14, -32395741
  store i32 %15, i32* %2, align 4
  br label %26

16:                                               ; preds = %1
  %17 = load i32, i32* %3, align 4
  %18 = mul nsw i32 %17, 237
  %19 = load i32, i32* %3, align 4
  %20 = ashr i32 %19, 16
  %21 = xor i32 %18, %20
  %22 = load i32, i32* %3, align 4
  %23 = shl i32 %22, 16
  %24 = xor i32 %21, %23
  %25 = xor i32 %24, -1812032818
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %16, %6
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
